--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 
+# =========================
 # OSX
 # =========================
 
@@ -43,6 +44,33 @@ Temporary Items
 .apdisk
 
 
+# =========================
 # Eclipse
+# =========================
+
+*.pydevproject
 .metadata
-.recommenders
+.project
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/
+ 
+# Locally stored "Eclipse launch configurations"
+*.launch
+ 
+# CDT-specific
+.cproject
+ 
+# PDT-specific
+.buildpath
